cmake_minimum_required(VERSION 3.15)
project(algoscpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(2_4 2_4.cpp)
add_executable(1_3 1_3.cpp)
add_executable(tests tests.cpp)
add_executable(3_2 3_2.cpp)
add_executable(3_2_1 3_2_1.cpp)
add_executable(3_2_2 3_2_2.cpp)
add_executable(quick_sort quick_sort.cpp)
add_executable(k_stat K_statistics.cpp)
add_executable(count count_sort.cpp)
add_executable(6_2 6_2.cpp)
add_executable(7_1 7_1.cpp)
add_executable(4_1 4_1.cpp)
add_executable(5_3_1 5_3_1.cpp)
add_executable(sem sem2.cpp)