SET(CMAKE_CXX_FLAGS "-std=c++0x")
add_executable(1 1.cpp)
add_executable(2 2_2.cpp)
add_executable(4_1 4_1.cpp)
add_executable(3_2 3_2.cpp)
add_executable(test test.cpp)
add_executable(huff huffman.cpp)
add_executable(asd tests.cpp)
add_executable(2_2_1 2_2_1.cpp)
add_executable(4_1_1 4_1_1.cpp)
add_executable(3_2_1 3_2_1.cpp)
add_executable(1_1 1_1.cpp)
add_executable(rk2 rk2.cpp)